chore(ci): add JDK 25 to CI (#313)
* chore(ci): add JDK 25 to CI

* chore: Add JVM argument for unsafe memory access

* chore: Update JVM argument handling for unsafe memory access based on JDK version

* chore: Update Java test matrix for JDK 25 and add unsafe memory access arguments

* chore: Remove JDK 25 from Maven image configuration in test matrix

* chore: Update documentation to clarify JDK 25+ requirements and JVM arguments

* chore: Update README to include JVM argument for unsafe memory access in JDK 25+

* chore: Update README to reflect compatibility with Java 25